--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/miglayout-4.0-swing.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-18.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-18.0.jar" sourcepath="open_src/guava-17.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
