--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/miglayout-4.0-swing.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-18.0.jar" sourcepath="open_src/guava-17.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/objenesis-2.1.jar" sourcepath="open_src/objenesis-2.1-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
