--- a/build.xml
+++ b/build.xml
@@ -7,10 +7,12 @@
     <property environment="env"/>
     <property name="Bowser.location" value="../Bowser"/>
     <property name="EZDB.location" value="../EZDB"/>
-    <property name="Float-Compute.location" value="../Float-Compute"/>
-    <property name="Float-Render.location" value="../Float-Render"/>
-    <property name="Gremlin.location" value="../Gremlin"/>
     <property name="JasonMirra.location" value="../JasonMirra"/>
+    <property name="float-common.location" value="../float-common"/>
+    <property name="float-compute.location" value="../float-compute"/>
+    <property name="float-log.location" value="../float-log"/>
+    <property name="float-render.location" value="../float-render"/>
+    <property name="gremlin.location" value="../gremlin"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
@@ -47,28 +49,17 @@
         <ant antfile="build.xml" dir="${Bowser.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${EZDB.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${EZDB.location}" inheritAll="false" target="build"/>
-        <ant antfile="build.xml" dir="${Float-Compute.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${Float-Compute.location}" inheritAll="false" target="build"/>
-        <ant antfile="build.xml" dir="${Float-Render.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${Float-Render.location}" inheritAll="false" target="build"/>
-        <ant antfile="build.xml" dir="${Gremlin.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${Gremlin.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${JasonMirra.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${JasonMirra.location}" inheritAll="false" target="build"/>
-    </target>
-    <target name="Images">
-        <java classname="ox.util.Images" failonerror="true" fork="yes">
-            <classpath refid="Ox.classpath"/>
-        </java>
-    </target>
-    <target name="Json">
-        <java classname="ox.Json" failonerror="true" fork="yes">
-            <classpath refid="Ox.classpath"/>
-        </java>
-    </target>
-    <target name="Utils">
-        <java classname="ox.util.Utils" failonerror="true" fork="yes">
-            <classpath refid="Ox.classpath"/>
-        </java>
+        <ant antfile="build.xml" dir="${float-common.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${float-common.location}" inheritAll="false" target="build"/>
+        <ant antfile="build.xml" dir="${float-compute.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${float-compute.location}" inheritAll="false" target="build"/>
+        <ant antfile="build.xml" dir="${float-log.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${float-log.location}" inheritAll="false" target="build"/>
+        <ant antfile="build.xml" dir="${float-render.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${float-render.location}" inheritAll="false" target="build"/>
+        <ant antfile="build.xml" dir="${gremlin.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${gremlin.location}" inheritAll="false" target="build"/>
     </target>
 </project>
