--- a/build.xml
+++ b/build.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- WARNING: Eclipse auto-generated file.
-              Any modifications will be overwritten.
-              To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. --><project basedir="." default="build" name="Ox">
+<project basedir="." default="build" name="ox">
     <property environment="env"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <path id="Ox.classpath">
+    <path id="ox.classpath">
         <pathelement location="bin"/>
-        <pathelement location="lib/miglayout-4.0-swing.jar"/>
         <pathelement location="lib/gson-2.3.jar"/>
         <pathelement location="lib/guava-20.0.jar"/>
         <pathelement location="lib/objenesis-2.1.jar"/>
@@ -33,7 +28,7 @@
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
-            <classpath refid="Ox.classpath"/>
+            <classpath refid="ox.classpath"/>
         </javac>
     </target>
 </project>
