--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
     <path id="ox.classpath">
         <pathelement location="bin"/>
         <pathelement location="lib/gson-2.3.jar"/>
-        <pathelement location="lib/guava-20.0.jar"/>
+        <pathelement location="lib/guava-27.0.1-jre.jar"/>
         <pathelement location="lib/objenesis-2.1.jar"/>
     </path>
     <target name="init">
