--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/objenesis-2.1.jar" sourcepath="open_src/objenesis-2.1-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-27.0.1-jre.jar" sourcepath="open_src/guava-27.0.1.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.8.2.jar" sourcepath="open_src/gson-2.8.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.2.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-27.0.1-jre.jar" sourcepath="open_src/guava-27.0.1.zip"/>
+	<classpathentry kind="lib" path="lib/failureaccess-1.0.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
