--- a/build.xml
+++ b/build.xml
@@ -6,12 +6,7 @@
     <property name="source" value="8"/>
     <path id="ox.classpath">
         <pathelement location="bin"/>
-        <pathelement location="lib/gson-2.8.2.jar"/>
-        <pathelement location="lib/failureaccess-1.0.1.jar"/>
-        <pathelement location="lib/guava-27.0.1-jre.jar"/>
-        <pathelement location="lib/objenesis-2.1.jar"/>
-    	<pathelement location="lib/slf4j-api-1.7.2.jar"/>
-        <pathelement location="lib/slf4j-simple-1.7.2.jar"/>
+    	<fileset dir="lib" includes="**/*.jar" />
     </path>
     <target name="init">
         <mkdir dir="bin"/>
